Cleaned up unused methods and normalized read and write paths